<resources>
    <string name="default_web_client_id" translatable="false">webClientId.apps.googleusercontent.com</string>

    <string name="app_name" translatable="false">ControlMed</string>
    <string name="Sign" translatable="false">Вход</string>
    <string name="Reg" translatable="false">Регистрация</string>
    <string name="Словарь">Словарь</string>
    <string name="Карты">Карты</string>
    <string name="Приём">Приём</string>
    <string name="Лекарства">Лекарства</string>
    <string name="Профиль">Профиль</string>
    <string name="google_reg">Зарегистрироваться с помощью Google</string>
    <string name="login">Зарегистрироваться</string>
    <string name="password">Пароль</string>
    <string name="email_reg">Почта для регистрации</string>
    <string name="or">или</string>
    <string name="sign">Войти</string>
    <string name="Группы_лекарств">Группы лекарств</string>
    <string name="Болезни">Болезни</string>
    <string name="search">Поиск</string>
    <string name="No_medicine">Сегодня все таблетки приняты!</string>

    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_meds">Добавить лекарства</string>
    <string name="name_med">Название лекарства</string>
    <string name="type_med">Тип лекарства</string>
    <string name="desc_med">Описание лекарства</string>
    <string name="dose">Доза</string>
    <string name="add_disease">Добавить болезнь</string>
</resources>