<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.ui.main_pages.MedFragment">

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:background="#F2FBFA"
        android:drawablePadding="20sp"
        android:hint="@string/search"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meds_fr" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/meds_fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Лекарства"
        android:textColor="#797688"
        android:textSize="20sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/virus_gr_fr"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#ECEDFE"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/virus_gr_fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Болезни"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/meds_fr"
        android:enabled="false"
        android:backgroundTint="#6F7696"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        android:layout_marginTop="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search"
        tools:listitem="@layout/item_disease" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_disease"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="#6F7696"/>

</androidx.constraintlayout.widget.ConstraintLayout>